# CalculLab1

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Loader.cpp  Loader.h  funcsin.cpp  main.cpp
